--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -87,10 +87,10 @@ click_button3.addEventListener('click', function() {
 			//document.getElementById("mypic").src="data:image/jpeg;base64,"+data;
 			if (data=="A")
 			{
-				document.getElementById("typlayer").src="https://www.youtube.com/embed/Cw12PDfFXxc" + "?autoplay=1";
+				document.getElementById("typlayer").src="https://www.youtube.com/embed/IUIs4C86Ilo" + "?autoplay=1";
 			}else if(data=="B")
 			{
-				document.getElementById("typlayer").src="https://www.youtube.com/embed/0A-ZEDl4zGo" + "?autoplay=1";
+				document.getElementById("typlayer").src="https://www.youtube.com/embed/D17R5p8Ft6w" + "?autoplay=1";
 			}
 		}
 	       });
@@ -104,7 +104,7 @@ click_button3.addEventListener('click', function() {
 <center>
 <div id="tab_yt" style="display:block">
     	<div class="video-responsive">
-            <iframe id="typlayer" width="420" height="315" src="https://www.youtube.com/embed/Cw12PDfFXxc" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <iframe id="typlayer" width="420" height="315" src="https://www.youtube.com/embed/IUIs4C86Ilo" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
         </div>
 </div>
 </center>
